Update photo sharing link in index.html

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                 <h3 class="parrafo parrafo--album">
                     Quiero inmortalizar este maravilloso momento, guardando fotos y para ello tengo mi propio album
                     digital <br> <br>
-                    <a class="boton__cta boton__cta4" href="#albumDigital">Compartir fotos</a>
+                    <a class="boton__cta boton__cta4" href="https://photos.app.goo.gl/yVmCxoyBBMbzN1yk7">Compartir fotos</a>
                     Ó podés compartir tus fotos y videos de la fiesta en instagram y etiquétame
                 </h3>
 
